# ConectaSAT

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Procfile  README.md  alembic.ini  app.json  fastapi-profile.code-profile  fix_trailing_whitespace.py  flake8_issues.txt  mypy.ini  openapisample.yml  pyproject.toml  pytest.ini  requirements.txt  sat_verification.py  setup.cfg  test_api.py  test_with_token.py
.cursor/: settings.json  snippets.json
.cursor/rules/: development_rules.mdc  project-rules.mdc
.github/workflows/: tdd-ci-cd.yml
alembic/: env.py
alembic/versions/: 4b5f455a555c_add_cfdi_history_table.py  945f8533c50d_add_full_name_to_superadmin.py  afed7a389541_add_token_id_and_details_fields_to_.py  initial_migration.py
app/: main.py
app/api/: admin.py  admin.py,cover  cfdi.py  health.py
app/core/: __init__.py  auth.py  config.py  deps.py  security.py
app/core/utils/: check_admin.py  get_tokens.py
app/db/: database.py  database.py,cover  init_db.py
app/models/: __init__.py  cfdi_history.py  user.py
app/schemas/: __init__.py  auth.py  cfdi.py  cfdi_history.py
app/services/: cfdi_history.py  sat_verification.py
app/tests/: conftest.py
app/tests/test_integration/: test_admin_api_integration.py  test_api_integration.py  test_api_with_token.py  test_cfdi_api.py  test_cfdi_history_api.py
app/tests/test_unit/: database_override.py  test_admin_api.py  test_auth.py  test_cfdi_api.py  test_cfdi_history.py  test_database.py  test_database_custom.py  test_database_direct.py  test_database_override.py  test_database_special.py  test_deps.py  test_init_db.py  test_sat_verification.py  test_security.py
